# neptan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: client.cpp  client_json.h  json.h  logging.cpp  neptah_shared.cpp  neptah_shared.h  neptah_shared.tpp  server.cpp  server_json.h
src/client/: network.cpp  shared.h
src/server/: command.cpp  network.cpp  shared.h
